--- a/style.css
+++ b/style.css
@@ -16,5 +16,23 @@ section{
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 90px 30px;
+    padding: 90px 10px;
+    /* background-image: url(/images/bg-pattern-top.svg); */
+    background-image: url(/images/bg-pattern-bottom.svg);
+    background-size: ;
+    background-position: bottom;
+}
+
+section{
+    background-image: url(/images/bg-pattern-top.svg);
+    background-position: top;
+}
+
+.motherContainer{
+    max-width: 375px;
+    background-color: white;
+}
+
+.background{
+    /* background-image: url(/images/bg-pattern-card.svg); */
 }
