--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ section{
     max-width: 375px;
     background-color: white;
     border-radius: 10px;
+    padding-bottom: 1.5rem;
 }
 
 .background{
@@ -66,11 +67,36 @@ img:hover{
     justify-content: center;
 
 }
-
+.txt_container{
+    border-bottom: 1px solid hsl(0, 0%, 79%);
+    padding-bottom: 1.1rem;
+}
 .txt_container p{
     text-transform: capitalize;
     text-align: center;
     color: hsl(229, 23%, 23%);
     font-weight: 700;
     word-spacing: 1px;
+}
+
+ul{
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 2rem;
+}
+
+ul li{
+    text-align: center;
+}
+
+ul li h1{
+    color: hsl(229, 23%, 23%);
+    padding-bottom: 0.6rem;
+}
+
+ul li p{
+    font-size: 0.6rem;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: hsl(0, 0%, 59%);
 }
